# llamadart

./: CHANGELOG.md  MIGRATION.md  README.md  ffi_ggml_backend.yaml  pubspec.yaml
.github/workflows/: chat_app_hf_static_deploy.yml  ci.yml
doc/: android_runtime_smoke_test_plan.md  webgpu_bridge.md
example/: README.md
example/basic_app/: README.md  pubspec.yaml
example/basic_app/test/: sqlite_vector_cli_options_test.dart  sqlite_vector_search_service_test.dart
example/chat_app/: README.md
example/chat_app/test/: backend_utils_test.dart  chat_generation_service_test.dart  mocks.dart  model_service_test.dart  settings_service_test.dart  text_sanitizer_test.dart  unit_test.dart
example/chat_app/web/: index.html
example/llamadart_server/: README.md
example/llamadart_server/lib/: llamadart_server.dart
example/llamadart_server/test/: openai_mapper_test.dart  openai_server_integration_test.dart
example/tui_coding_agent/: .gitignore  README.md  pubspec.yaml
example/tui_coding_agent/lib/: tui_coding_agent.dart
example/tui_coding_agent/test/: model_source_resolver_test.dart  runner_tool_regression_test.dart  (+5 more)
hook/: build.dart
include/: log.h
lib/: llamadart.dart
macos/: llama_cpp_dart.podspec
scripts/: android_runtime_smoke.sh  fetch_webgpu_bridge_assets.sh
src/: CMakeLists.txt
test/: widget_test.dart
tool/testing/: native_embedding_benchmark.dart  native_embedding_sweep.dart
website/: sidebars.ts  versions.json
website/docs/: intro.md
website/versioned_sidebars/: version-0.6.3-sidebars.json
windows/: CMakeLists.txt
(+92 files in other folders)
